[package]
name = "parcnet-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
pod2 = { git = "https://github.com/0xPARC/pod2.git" }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
num-bigint = "0.4"
sha2 = "0.10"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
webbrowser = "0.8"
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2.git" }
pod-utils = { path = "../pod-utils" }

[profile.release-with-debug]
inherits = "release"
debug = true
