[package]
name = "podnet-cli"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies (shared)
pod2.workspace = true
plonky2.workspace = true
pod-utils.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
chrono.workspace = true
anyhow.workspace = true
num-bigint.workspace = true
tokio.workspace = true
reqwest.workspace = true

# CLI-specific dependencies
clap = { version = "4.0", features = ["derive"] }
sha2 = "0.10"
webbrowser = "0.8"
