[package]
name = "podnet-models"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pod2.workspace = true
hex.workspace = true
pod-utils = { path = "../utils" }
pod2_solver = { path = "../../pod2-client/solver" }
num-bigint.workspace = true

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
