[package]
name = "podnet-models"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pod2.workspace = true
hex.workspace = true
pod-utils = { path = "../utils" }
num-bigint.workspace = true
pod2_solver = { path = "../../client-pod2/solver" }
env_logger = "0.11.8"
log.workspace = true

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
