[package]
name = "podnet-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"]}
tokio = { version = "1.0", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
pulldown-cmark = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
log = "0.4"
env_logger = "0.11"
pod2 = { git = "https://github.com/0xPARC/pod2.git" }
num-bigint = "0.4"
chrono = { version = "0.4", features = ["serde"] }
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2.git" }
pod-utils = { path = "../utils" }

[profile.release-with-debug]
inherits = "release"
debug = true

