[package]
name = "podnet-server"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies (shared)
podnet-models = { path = "../models" }
pod2.workspace = true
plonky2.workspace = true
pod-utils.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
hex.workspace = true
log.workspace = true
num-bigint.workspace = true
chrono.workspace = true

# Server-specific dependencies
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
rusqlite = { version = "0.31", features = ["bundled"] }
pulldown-cmark = "0.13"
env_logger = "0.11"
sha2 = "0.10"

[dev-dependencies]
rand = "0.8"
